# dict_client

./: Cargo.toml  README.md
dict_client/: Cargo.toml
dict_client/src/: async_client.rs  client.rs  cmd.rs  lib.rs  response.rs
example/: Cargo.toml
example/src/: main.rs
